Fixes #1384 [Core] Java 18 Support - Cannot build project